# spotterlabs-api

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  manage.py  pyproject.toml
fuel_route/: settings.py  urls.py
route_optimizer/: admin.py  apps.py  constants.py  models.py  scheduler.py  signals.py  tasks.py  urls.py  views.py
route_optimizer/management/commands/: geocode_stations.py  load_stations.py
route_optimizer/migrations/: 0001_initial.py
route_optimizer/services/: map_image.py  optimizer.py  pipeline.py  routing.py  spatial.py
route_optimizer/templates/route_optimizer/: route_view.html
